@@ -1161,8 +1161,8 @@ prompt_dst_name(const char src_name[])
 	char prompt[128 + PATH_MAX];
 
 	snprintf(prompt, ARRAY_LEN(prompt), "New name for %s: ", src_name);
-	fops_line_prompt(prompt, src_name, &prompt_dst_name_cb, /*cb_arg=*/NULL, NULL,
-			0);
+	fops_line_prompt(prompt, src_name, &prompt_dst_name_cb, /*cb_arg=*/NULL,
+			/*complete=*/NULL);
 }
 
 /* Callback for line prompt result. */
